# sadieos

./: Cargo.toml  PLAN.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
kernel/: Cargo.toml  PLAN.md  x86_64-sd_kernel.json
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  framebuffer.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  process.rs  serial.rs  vga_buffer.rs
kernel/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
src/: interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  stack_overflow.rs
userland/hello-asm/: hello  hello.asm
